--- a/configs/prediction/default.yaml
+++ b/configs/prediction/default.yaml
@@ -14,8 +14,9 @@ device: cuda
 out_key: inpainted
 
 refine: False # refiner will only run if this is True
+extpadding: False # extpadding ratio float (ex. 0.7 or 1.45)
 refiner:
-  gpu_ids: 0,1 # the GPU ids of the machine to use. If only single GPU, use: "0,"
+  gpu_ids: 0, # the GPU ids of the machine to use. If only single GPU, use: "0,"
   modulo: ${dataset.pad_out_to_modulo}
   n_iters: 15 # number of iterations of refinement for each scale
   lr: 0.002 # learning rate
